yaml/app-livenessProbe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-livenessprob
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: app

      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
        
      ports:
        - containerPort: 8080
          name: http
