yaml/app-readinessProbe.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-readinessprob
spec:
  containers:
    - image: gcr.io/smartcity-gl/demo:v2.0.1
      name: app

      livenessProbe:
        httpGet:
          path: /
          port: 8000
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3

      readinessProbe:
        httpGet:
          path: /
          port: 8000
        periodSeconds: 2
        initialDelaySeconds: 0
        failureThreshold: 3
        successThreshold: 1
        
      ports:
        - containerPort: 8080
          name: http
