yaml/app-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-secret
spec:
  containers:
  - name: mypod
    image: redis
    volumeMounts:
    - name: foo
      mountPath: "/etc/foo"
      readOnly: true
  volumes:
  - name: foo
    secret:
      secretName: secrret1
