yaml/app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:1
      name: app
      ports:
        - containerPort: 8080
          name: http
