yaml/frontend-v2.yaml
---
# Source: demo-app/templates/deployment.yaml
# for versions before 1.9.0 use apps/v1beta2
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: frontend-v2
spec:
  selector:
    matchLabels:
      app: frontend
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v2
        revision: 4ffe4fe
    spec:
      containers:
      - name: frontend
        image: denvasyliev/k8s-diy:frontend-v2-0d83836
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readinez
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 3
