yaml/service-v2.yaml
---
# Source: demo-app/templates/deployment.yaml
# for versions before 1.9.0 use apps/v1beta2
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: service-v2
spec:
  selector:
    matchLabels:
      app: service
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        app: service
        version: v2
    spec:
      containers:
      - name: service
        image: denvasyliev/service:v0.1.5-bootcamp-v2-cab4a2f
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 3
