yaml/backend-svc.yaml
---
# Source: demo-app/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    
spec:
  ports:
  - name: http-backend
    port: 80
    targetPort: 80
  selector:
    app: backend
