yaml/datastore.yaml
---
# Source: demo-app/templates/deployment.yaml
# for versions before 1.9.0 use apps/v1beta2
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: datastore
spec:
  selector:
    matchLabels:
      app: datastore
  replicas: 1
  template:
    metadata:
      labels:
        app: datastore
        version: v0.1.5-bootcamp-6b67ee2
    spec:
      containers:
      - name: datastore
        image: denvasyliev/k8s-diy:datastore-v1-4ffe4fe
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 3

---
# Source: demo-app/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: datastore
  labels:
    app: datastore
  annotations: 
    
spec:
  ports:
  - name: http-datastore
    port: 80
    targetPort: 80
  selector:
    app: datastore
