yaml/front-v1.yaml
---
# Source: demo-app/templates/deployment.yaml
# for versions before 1.9.0 use apps/v1beta2
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: front-v1
spec:
  selector:
    matchLabels:
      app: front-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: front-v1
        version: v0.1.5-bootcamp-56e6f4e
    spec:
      containers:
      - name: front
        image: denvasyliev/front:v0.1.5-bootcamp-56e6f4e
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readinez
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 3

---
# Source: demo-app/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: front-v1
  labels:
    app: front-v1
  annotations:
    
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  front-api-v1
      prefix: /api/
      service: front-v1
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  front-default-v1
      prefix: "/(.*)"
      prefix_regex: true
      service: front-v1
      
spec:
  ports:
  - name: http-front-v1
    port: 80
    targetPort: 80
  selector:
    app: front-v1
