yaml/frontend-v1-svc.yaml
---
# Source: demo-app/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-v1
  labels:
    app: frontend
    version: v1
  annotations:
    
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  frontend-api-v1
      prefix: /api/
      service: frontend-v1
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  frontend-default-v1
      prefix: "/(.*)"
      prefix_regex: true
      service: frontend-v1
      
spec:
  ports:
  - name: http-frontend-v1
    port: 80
    targetPort: 80
  selector:
    app: frontend
    version: v1
