yaml/service-dev.yaml
---
# Source: demo-app/templates/deployment.yaml
# for versions before 1.9.0 use apps/v1beta2
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: service-dev-dev
spec:
  selector:
    matchLabels:
      app: service-dev-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: service-dev-dev
        version: v0.1.5-17a7d13
    spec:
      containers:
      - name: service-dev
        image: denvasyliev/service:v0.1.5-17a7d13
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 3

---
# Source: demo-app/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: service-dev
  labels:
    app: service-dev
  annotations:
    
spec:
  ports:
  - name: http-service-dev
    port: 80
    targetPort: 80
  selector:
    app: service-dev-dev
