yaml/service-svc.yaml
---
# Source: demo-app/templates/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: service
  annotations:
    
spec:
  ports:
  - name: http-service
    port: 80
    targetPort: 80
  selector:
    app: service
