yaml/service.yaml
---
# Source: demo-app/templates/deployment.yaml
# for versions before 1.9.0 use apps/v1beta2
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: service-prod
spec:
  selector:
    matchLabels:
      app: service-prod
  replicas: 1
  template:
    metadata:
      labels:
        app: service-prod
        version: v0.1.4-776e7c0
    spec:
      containers:
      - name: service
        image: denvasyliev/service:v0.1.4-776e7c0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
        securityContext:
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 3

---
# Source: demo-app/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
  labels:
    app: service
  annotations:
    
spec:
  ports:
  - name: http-service
    port: 80
    targetPort: 80
  selector:
    app: service-prod
