yaml/nginx-app-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: app-ingress
  namespace: default
spec:
  rules:
  - host: demo.qrem.cloud
    http:
      paths:
      - backend:
          serviceName: appsvc1
          servicePort: 80
        path: /app1
  - host: demo1.qrem.cloud
    http:
      paths:
        
      - backend:
          serviceName: appsvc2
          servicePort: 80
        path: /app2
