yaml/service-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service
spec:
  hosts:
  - service
  http:
  - route:
    - destination:
        host: service
        subset: prod
      weight: 95
    - destination:
        host: service
        subset: canary
      weight: 5      
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service
spec:
  host: service
  subsets:
  - name: prod
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
